[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuopt-stubs"
version = "0.1.0"
description = "Type stubs for NVIDIA cuOpt"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zach Siegel"}
]
keywords = ["cuopt", "typing", "stubs", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/zsiegel/cuopt-stubs"
Repository = "https://github.com/zsiegel/cuopt-stubs"

[tool.setuptools]
packages = ["cuopt"]

[tool.setuptools.package-data]
"cuopt" = ["py.typed", "**/*.pyi"]
